@@ -1,3 +1,8 @@
+* Nixie attacks sometimes start combat with wrong orientation
+* Nixies attacked while party was camped on land
+* Frame sometimes gets messed up and needs a repaint
+* If in follow mode, casting a combat spell should exit follow mode
+
 Known BUGS in release 0.1.1
 
 * Firing ship cannons in town at the nixies causes combat to begin immediately,
