@@ -3474,8 +3474,8 @@ MAP m_wilderness {
       _____---~~~~--__________________________
       _____---%%%%--__^^^_____________________
       ______---...------^--___________________
-      _______---^{^{{{^-^^---_________________
-      _________--{{{^{^-^{{{--_____-^^^_______
+      _______---^{^{{{^-^^^--_________________
+      _________--{{{^{^-{{^^--_____-^^^_______
       _______________^^-^^^^--_____--!^^^^-___
       ________________---^^^^^^^^^^^^!!!^!--__
       __________________-^^^^^^^^^^^^^^!!!^-__
@@ -3494,7 +3494,7 @@ PLACE p_wilderness {
   map m_wilderness;
   underground 0;
   objects {
-    t_goblin_horde 1 8 (4) 0 c_goblin null;
+    t_goblin_horde 4 14 (4) 0 c_goblin null;
     t_undead_brigade 2 26 (4) 0 null vt_ship;
   }
   typical_npc_parties {
